# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Applied patch from Andrew Orr that fixes the recent changes in the
  BitCoin protocol. [Patrik]

o [NSE] Added a Network Data Management Protocol (ndmp) library and the
  scripts:
  + ndmp-version - retrieves version information
  + ndmp-fs-info - retrieves information about remote filesystems
  [Patrik]

o [NSE] Added the script http-vuln-cve2010-2861 to detect the Cold Fusion
  CVE-2010-2861 directory traversal vulnerability. [Micah Hoffman]

o [NSE] Added support for edns-client-subnet requests to the DNS library and
  the script dns-client-subnet-scan that scans for addresses resolved from
  different subnets. [John Bond]

o [NSE] Added support for decoding EIGRP broadcasts from Cisco routers
  to broadcast-listener. [Tom]

o [NSE] Added redirect support to the http library. All calls to http.get and
  http.head now transparently handle any HTTP redirects. [Patrik]

o [NSE] Added asn-to-prefix.nse by John Bond, to convert AS numbers to
  IP address ranges and optionally scan them.

o [NSE] Modified the sql-injection script to use the httpspider library.
  [Lauri Kokkonen]

o [NSE] Added a rsync library and two new script:
  + rsync-list-modules - list available rsync modules
  + rsync-brute - attempts to brute force passwords against a rsync module
  [Patrik]

o Added --with-apr and --with-subversion configuration options to
  support systems where those libraries aren't in the usual places.
  [David]

o [NSE] Added voldemort-info, that retrieves cluster and store information
  from the Voldemort distributed key-value store. [Patrik]

o [NSE] Added http-qnap-nas-info, that retrieves the model, firware version,
  and enabled services from a QNAP Network Attached Storage (NAS) device.
  [Brendan Coles]

o [NSE] Fixed a bunch of global access errors in various libraries reported by
  the nse_check_globals script. [Patrik]

o [NSE] Added url-snarf. The script sniffs the network for URLs in HTTP